additional test cases for handling plus symbols in filenames after report on mailing list
git-svn-id: file:///srv/local/data/cleanRepo/trunk@22354 a0517364-e873-4167-b1c8-416daa5a6b91